--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 
     <modules>
         <module>springboot-ddd</module>
+        <module>springboot-security-jwt</module>
     </modules>
 
     <properties>
